不要な変更を削除

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
         {
             "js": ["content.js"],
             "css": ["style/style.css"],
-            "matches": ["*://manaba.tsukuba.ac.jp/*"]
+            "matches": ["https://manaba.tsukuba.ac.jp/ct/home*"]
         }
     ],
     "permissions": [
